<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/login_form"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <AutoCompleteTextView
                android:hint="@string/prompt_firstname"
                android:id="@+id/firstname"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <AutoCompleteTextView
                android:hint="@string/prompt_lastname"
                android:id="@+id/lastname"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <AutoCompleteTextView
                android:hint="@string/prompt_username"
                android:id="@+id/username"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <AutoCompleteTextView
                android:hint="@string/prompt_roll_no"
                android:id="@+id/roll_no"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <AutoCompleteTextView
                android:hint="@string/prompt_email"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:hint="@string/prompt_password"
                android:id="@+id/password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            style="?android:textAppearanceSmall"
            android:id="@+id/email_sign_up_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:text="@string/action_sign_up_short"
            android:textStyle="bold" />
        <Button
            style="?android:textAppearanceSmall"
            android:id="@+id/email_sign_in_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>